--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/dbInfnet?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
